added duration to buttons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="flex flex-col w-full space-y-3">
           <a href="https://github.com/Chisomworlu12" target="_blank"
             ><button
-              class="w-full bg-Grey-700 py-2 rounded hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
+              class="w-full bg-Grey-700 py-2 rounded duration-500 ease-in-out hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
             >
               GitHub
             </button></a
@@ -56,27 +56,27 @@
             href="https://www.frontendmentor.io/profile/Chisomworlu12"
             target="_blank"
             ><button
-              class="w-full bg-Grey-700 py-2 rounded hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
+              class="w-full bg-Grey-700 py-2 rounded duration-500 ease-in-out hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
             >
               Frontend Mentor
             </button></a
           >
           <a href="https://www.linkedin.com/in/chisomworlu" target="_blank"
             ><button
-              class="w-full bg-Grey-700 py-2 rounded hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
+              class="w-full bg-Grey-700 py-2 rounded duration-500 ease-in-out hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
             >
               LinkedIn
             </button></a
           >
           <a href="https://x.com/chisomwo" target="_blank"
             ><button
-              class="w-full bg-Grey-700 py-2 rounded hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
+              class="w-full bg-Grey-700 py-2 rounded duration-500 ease-in-out hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
             >
               Twitter
             </button></a
           >
           <button
-            class="w-full bg-Grey-700 py-2 rounded hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
+            class="w-full bg-Grey-700 py-2 rounded duration-500 ease-in-out hover:bg-Green hover:text-Grey-900 font-inter-variable-600"
           >
             Instagram
           </button>
